# electronic-prescription-service-get-secrets

./: .gitallowed  .gitignore  .pre-commit-config.yaml  .tool-versions  .tool-versions.asdf  Makefile  README.md  build.sh  package-lock.json  package.json  pyproject.toml  sonar-project.properties  zizmor.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  release.yml
.github/workflows/: build.yml  pull_request.yml  quality_checks.yml  release.yml  sync_copilot.yml
cloudformation/: README.md  ci_resources.yml
release_notes/: v1.0.698-alpha.md  v1.0.699-alpha.md  v1.0.700-alpha.md  v1.0.701-alpha.md  v1.0.702-alpha.md  v1.0.703-alpha.md  v1.0.704-alpha.md  v1.0.705-alpha.md  v1.0.706-alpha.md  v1.0.707-alpha.md  v1.0.708-alpha.md  v1.0.709-alpha.md  v1.0.710-alpha.md  v1.0.711-alpha.md  v1.0.712-alpha.md  v1.0.713-alpha.md  v1.0.714-alpha.md  v1.0.715-alpha.md  v1.0.716-alpha.md  v1.0.717-alpha.md  v1.0.718-alpha.md  v1.0.719-alpha.md  v1.0.720-alpha.md  v1.0.721-alpha.md  v1.0.722-alpha.md  v1.0.723-alpha.md  v1.0.724-alpha.md  v1.0.725-alpha.md  v1.0.726-alpha.md  v1.0.727-alpha.md  v1.0.728-alpha.md  v1.0.729-alpha.md  v1.0.730-alpha.md  v1.0.731-alpha.md  v1.0.732-alpha.md  v1.0.733-alpha.md  v1.0.734-alpha.md  v1.0.735-alpha.md  v1.0.736-alpha.md  v1.0.737-alpha.md
scripts/: check_go_licenses.sh
src/: get-secrets-layer  go-retrieve-secret.go  go.mod  go.sum
