[tool.poetry]
name = "electronic-prescription-service-get-secrets"
version = "0.0.1-alpha"
description = "Lambda layer to get secrets from AWS"
license = "MIT"
authors = [
    "EPS Team"
]
readme = "README.md"
repository = "https://github.com/NHSDigital/electronic-prescription-service-get-secrets"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^3.0.4"
gitpython = "^3.1.45"
requests = "^2.32.5"
boto3 = "^1.41.0"
argparse = "^1.4.0"
pre-commit = "^4.4.0"
pytest = "^9.0.1"
cfn-lint = "^1.41.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
black = "^25.11"
pip-licenses = "^5.5.0"
jinja2 = "^3.1.5"

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
