[tool.poetry]
name = "electronic-prescription-service-get-secrets"
version = "0.0.1-alpha"
description = "Lambda layer to get secrets from AWS"
license = "MIT"
authors = [
    "EPS Team"
]
readme = "README.md"
repository = "https://github.com/NHSDigital/electronic-prescription-service-get-secrets"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^4.5.1"

[tool.poetry.group.dev.dependencies]
pip-licenses = "^5.5.0"

[tool.poetry.scripts]
